<resources>
    <string name="app_name">Terrasport</string>

    <string name="action_valider">Valider</string>
    <string name="action_annuler">Annuler</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Créer un compte</string>

    <string name="utilisateur_nom">Nom</string>
    <string name="utilisateur_prenom">Prenom</string>
    <string name="utilisateur_age">Age</string>
    <string name="utilisateur_sexe">Sexe</string>
    <string name="utilisateur_select_sexe">Sélectionnez un sexe</string>
    <string name="utilisateur_mail">Email</string>

    <string name="prompt_email">Login</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="error_invalid_email">L\'adresse email n\'est pas valide</string>
    <string name="error_invalid_password">Le mot de passe est trop court</string>
    <string name="error_incorrect_password">Le mot de pass est incorrect</string>
    <string name="error_field_required">Ce champ est obligatoire</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_creer_compte">Créer un compte</string>
    <string name="title_activity_register">Register</string>
    <string name="prompt_age">Age</string>

    <string-array name="sexe_array">
        <item>Homme</item>
        <item>Femme</item>
        <item>Autre</item>
    </string-array>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="evenements">Liste des Evènements</string>
    <string name="participations">Mes participations</string>
    <string name="demandes_de_participation">Demandes de participation</string>
    <string name="mes_evenements">Mes évènements</string>
    <string name="les_terrains">Les terrains</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ajouter_evenement">+ Evenement</string>
    <string name="nombre_de_places_disponibles">Nombre de places</string>
    <string name="nombre_de_participants">Nombre de participants</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="titre_ajout_evenement">Ajouter un évènement</string>
    <string name="niveau_cible">Niveau cible</string>
    <string name="nombre_de_places_restantes">Nombre de places restantes</string>
    <string name="titre_ajout_terrain">Ajouter un terrain</string>
    <string name="type_de_terrain">Type de terrain</string>
    <string name="nom_terrain">Nom du terrain</string>
    <string name="terrain_public">Terrain public</string>
    <string name="adresse_terrain">Adresse</string>

    <string name="titre_dialbox_confirmation">Confirmation</string>
    <string name="text_dialbox_confirmation_envoie_demande">Etes vous sure de vouloir envoyer une demande de participation à cet évènement ?</string>
    <string name="titre_dialbox_erreur_internet">Connection</string>
    <string name="text_dialbox_erreur_internet">Vous n\'êtes pas connecté à internet veuillez réessayer ultérieurement</string>
    <string name="titre_demandes_en_cours">Demandes en cours</string>
    <string name="close">Fermer</string>
    <string name="no_content">Aucune données à afficher</string>
    <string name="signaler">Signaler</string>
    <string name="deconnexion">Déconnexion</string>
</resources>
