<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Actions">
        <menu>
        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_evenement"
                android:icon="@drawable/ic_map"
                android:title="@string/evenements"/>
            <item
                android:id="@+id/nav_mes_evenements"
                android:icon="@drawable/ic_map"
                android:title="@string/mes_evenements" />
            <item
                android:id="@+id/nav_participation"
                android:icon="@drawable/ic_personne"
                android:title="@string/participations" />
            <item
                android:id="@+id/nav_demandes_participation"
                android:icon="@drawable/ic_personne"
                android:title="@string/demandes_de_participation"/>
            <item
                android:id="@+id/nav_map_terrains"
                android:icon="@drawable/ic_map"
                android:title="@string/les_terrains"/>
        </group>
        </menu>
    </item>
    <item android:title="Statut">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_log_out"
                android:title="Déconnection" />
        </menu>
    </item>

</menu>
