<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/AppTheme.MapView">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/titre_ajout_terrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.TitleDialBox" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_map"
            android:id="@+id/imageView"
            android:layout_gravity="center"/>

            <TextView
                android:id="@+id/text_adresse_terrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.MapView"
                android:layout_weight="1.5" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp" >

            <TextView
                android:text="@string/type_de_terrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.MapView"
                android:layout_weight="1.5" />

            <Spinner
                android:id="@+id/select_sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.Spinner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp" >

            <TextView
                android:text="@string/nom_terrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.MapView"
                android:layout_weight="1.5" />

            <EditText
                android:id="@+id/edit_nom_terrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:theme="@style/AppTheme.MapView"
                android:layout_weight="0.5"
                android:layout_gravity="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">

            <TextView
                android:text="@string/terrain_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.MapView"
                android:layout_weight="1.5" />

            <ToggleButton
                android:id="@+id/switch_terrain_public"
                android:background="@drawable/toggle_selector"
                android:layout_marginBottom="20dp"
                android:text="ToggleButton"
                android:textOn="OUI"
                android:textOff="NON"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="end"
                android:theme="@style/AppTheme.MapView" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@color/green_primary"
                android:clickable="true"
                android:text="@string/valider"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/btn_no"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:background="@color/colorSecondary"
                android:clickable="true"
                android:text="@string/annuler"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>