<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background_material_dark_1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:text="@string/titre_ajout_evenement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textAppearance="@android:style/TextAppearance.DialogWindowTitle" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <CalendarView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/calendarView"
                android:layout_weight="1"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp" >

            <TextView
                android:text="@string/niveau_cible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textColor="@color/white"/>

            <Spinner
                android:id="@+id/select_niveau"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.Spinner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp" >

            <TextView
                android:text="@string/nombre_de_places_disponibles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/edit_nb_places_disponibles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/white"
                android:layout_weight="0.5"
                android:layout_gravity="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">

            <TextView
                android:text="@string/nombre_de_places_restantes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_weight="1.5" />

            <EditText
                android:id="@+id/edit_nb_places_restantes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/white"
                android:layout_weight="0.5"
                android:layout_gravity="end"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@color/green_primary"
                android:clickable="true"
                android:text="@string/valider"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/btn_no"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:background="@color/colorSecondary"
                android:clickable="true"
                android:text="@string/annuler"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_weight="1"
                style="@style/Widget.AppCompat.Button.Colored" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>