<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
     android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/background_material_dark_1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/titre_demandes_en_cours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textAppearance="@android:style/TextAppearance.DialogWindowTitle" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_no_content"
        android:text="@string/no_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:textColor="@color/white"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_demande_evenement"
        android:name="com.terrasport.fragment.EvenementUtilisateurFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:minHeight="300dp"
        android:minWidth="250dp"
        app:layoutManager="LinearLayoutManager"
        tools:context="com.terrasport.fragment.EvenementUtilisateurFragment"
        tools:listitem="@layout/fragment_demande_participation_evenement" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="40dp" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="right">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:background="@color/colorSecondary"
            android:clickable="true"
            android:text="@string/close"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>